HW2/part4/t42.output
running e2c
compiling the C generated code
t42.c: In function ‘main’:
t42.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t42.c:5:2: error: expected expression before ‘=’ token
  = 999;
  ^
t42.c:6:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t42.c:7:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t42.c:8:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t42.c:9:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t42.c:9:1: warning: useless type name in empty declaration
t42.c:10:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t42.c:11:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:12:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:13:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:14:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:15:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:16:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:17:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t42.c:18:1: error: expected declaration or statement at end of input
 }
 ^
